tests/baselines/reference/typeParameterArgumentEquivalence2.errors.txt
==== tests/cases/compiler/typeParameterArgumentEquivalence2.ts (2 errors) ====
    function foo<T,U>() {
        var x: (item: U) => boolean;
        var y: (item: T) => boolean;
        x = y;  // Should be an error
        ~
!!! typeParameterArgumentEquivalence2.ts(4,5): error TS2012: Type '(item: T) => boolean' is not assignable to type '(item: U) => boolean':
!!! 	Call signatures of types '(item: T) => boolean' and '(item: U) => boolean' are incompatible.
        y = x;  // Shound be an error
        ~
!!! typeParameterArgumentEquivalence2.ts(5,5): error TS2012: Type '(item: U) => boolean' is not assignable to type '(item: T) => boolean':
!!! 	Call signatures of types '(item: U) => boolean' and '(item: T) => boolean' are incompatible.
    }
    